# simply.ffmpeg-parser

./: .gitignore  METADATA_EXTRACTOR.md  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: deploy-pages.yml
metadata-extractor/: README.md  pyproject.toml
metadata-extractor/ffmpeg_metadata_extractor/: _logging.py  asset_check.py  attribution.py  av_options_parser.py  avopt_c.py  cli.py  codecs_parser.py  config_texi.py  dedupe.py  extractor.py  filters_parser.py  git_utils.py  html_doc.py  models.py  named_parser.py  options_c.py  options_parser.py  parsing.py  pinned_assets.py  staging.py  tag_selection.py  texi_markdown.py  texi_traversal.py  texi_xml.py  upstream_enrich.py  upstream_help.py  x264_doc.py  x264_help.py  x265_help.py
metadata-extractor/ffmpeg_metadata_extractor/assets/: t2h.pm
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs
web/public/metadata/ffmpeg/: index.json
web/src/: App.tsx  index.css  main.tsx  metadata.ts  selection.ts  sourceRanges.ts  textareaCaret.ts  types.ts
web/src/components/: CommandInput.tsx  DiagnosticsPanel.tsx  FlowChart.tsx  PipelineChart.tsx  SelectionPanel.tsx  SummaryStrip.tsx  TreeList.tsx  VersionSelector.tsx
web/src/hooks/: useMetadata.ts  useSelection.ts
web/src/parser/: diagnostics.ts  fallbacks.ts  filters.ts  ids.ts  index.ts  lookups.ts  pipeline.ts  resolver.ts  semantic.ts  streamSpecifier.ts  tokenize.ts  tree.ts  visualization.ts
